[package]
name = "tracing-futures"
version = "0.3.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
homepage = "https://tokio.rs"
description = """
Utilities for instrumenting `futures` with `tracing`.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "profiling", "tracing", "futures", "async"]
license = "MIT"

[features]
default = ["std-future", "std"]
futures-01 = ["futures_01", "std"]
futures-03 = ["std-future", "futures", "futures-task", "std"]
std-future = ["pin-project"]
std = ["tracing/std"]

[dependencies]
futures_01 = { package = "futures", version = "0.1", optional = true }
futures = { version = "0.3.0", optional = true }
futures-task = { version = "0.3", optional = true }
pin-project = { version = "0.4", optional = true }
tracing = { path = "../tracing", version = "0.2", default-features = false }
tokio-executor = { version = "0.1", optional = true }
tokio = { version = "0.1", optional = true }

[dev-dependencies]
tokio = "0.1.22"
tokio-test = "0.2"
tracing-core = { path = "../tracing-core", version = "0.2" }

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
