[package]
name = "tracing-futures"
version = "0.3.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
homepage = "https://tokio.rs"
description = """
Utilities for instrumenting `futures` with `tracing`.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "profiling", "tracing", "futures", "async"]
license = "MIT"
rust-version = "1.49.0"

[features]
default = ["std-future", "std"]
futures-01 = ["futures_01", "std"]
futures-03 = ["std-future", "futures", "futures-task", "std"]
std-future = ["pin-project-lite"]
tokio = ["tokio_01"]
std = ["tracing/std"]

[dependencies]
futures_01 = { package = "futures", version = "0.1.31", optional = true }
futures = { version = "0.3.21", optional = true }
futures-task = { version = "0.3.21", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
tracing = { path = "../tracing", version = "0.2", default-features = false }
tokio-executor = { version = "0.1.10", optional = true }
tokio_01 = { package = "tokio", version = "0.1.22", optional = true }

# Fix minimal-versions
tokio-threadpool = "0.1.18"
mio = "0.8.4"

[dev-dependencies]
tokio-test = "0.4.2"
tracing-core = { path = "../tracing-core", version = "0.2" }
tracing-mock = { path = "../tracing-mock", features = ["tokio-test"] }

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
