[package]
name = "tracing-journald"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = "rich journald subscriber for `tracing`"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["tracing", "journald"]
rust-version = "1.63.0"

[dependencies]
libc = "0.2.126"
tracing-core = { path = "../tracing-core", version = "0.2" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry"] }

[dev-dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
tracing = { path = "../tracing", version = "0.2" }

