[package]
name = "tracing-log"
version = "0.2.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Provides compatibility between `tracing` and the `log` crate.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "log"]
license = "MIT"
readme = "README.md"
rust-version = "1.63.0"

[features]
default = ["log-tracer", "std"]
std = ["log/std"]
log-tracer = []

[dependencies]
tracing-core = { path = "../tracing-core", version = "0.2"}
log = "0.4.17"
once_cell = "1.13.0"
env_logger = { version = "0.8.4", optional = true }

[dev-dependencies]
tracing = { path = "../tracing", version = "0.2"}

[badges]
maintenance = { status = "actively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
