[package]
name = "tracing-macros"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Macros for emitting trace events
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing"]
license = "MIT"
rust-version = "1.63.0"

[dependencies]
tracing = { path = "../tracing", version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3" }

[badges]
maintenance = { status = "experimental" }
