[package]
name = "tracing-mock"
version = "0.1.0-beta.3"
authors = [
    "Eliza Weisman <eliza@buoyant.io>",
    "Hayden Stainsby <hds@caffeineconcepts.com>",
    "Tokio Contributors <team@tokio.rs>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Utilities for testing `tracing` and crates that uses it.
"""
categories = [
    "development-tools::testing"
]
keywords = [
    "tracing",
    "mock",
    "testing"
]
edition = "2018"
rust-version = "1.65.0"

[dependencies]
tracing = { path = "../tracing", version = "0.1.43", features = ["std", "attributes"], default-features = false }
tracing-core = { path = "../tracing-core", version = "0.1.28", default-features = false }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry"], optional = true }

# Fix minimal-versions; tokio-test fails with otherwise acceptable 0.1.0
tokio-stream = { version = "0.1.9", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
