[package]
name = "tracing-opentelemetry"
version = "0.17.4"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"
rust-version = "1.46.0"

[features]
default = ["tracing-log"]

[dependencies]
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
tracing = { path = "../tracing", version = "0.1", default-features = false, features = ["std"] }
tracing-core = { path = "../tracing-core", version = "0.1" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry", "std"] }
tracing-log = { path = "../tracing-log", version = "0.1", default-features = false, optional = true }
once_cell = "1"

[dev-dependencies]
async-trait = "0.1"
criterion = { version = "0.3", default_features = false }
opentelemetry-jaeger = "0.16"

[lib]
bench = false

[[bench]]
name = "trace"
harness = false
