[package]
name = "tracing-opentelemetry"
version = "0.16.0"
authors = [
    "Julian Tescher <julian@tescher.me>",
    "Tokio Contributors <team@tokio.rs>"
]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/tokio-rs/tracing/tree/master/tracing-opentelemetry"
repository = "https://github.com/tokio-rs/tracing"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "async"]
license = "MIT"
edition = "2018"
rust-version = "1.46.0"

[features]
default = ["tracing-log", "metrics"]
# Enables support for exporting OpenTelemetry metrics
metrics = ["opentelemetry/metrics"]

[dependencies]
opentelemetry = { version = "0.17.0", default-features = false, features = ["trace"] }
tracing = { path = "../tracing", version = "0.2", default-features = false, features = ["std"] }
tracing-core = { path = "../tracing-core", version = "0.2" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", default-features = false, features = ["registry", "std"] }
tracing-log = { path = "../tracing-log", version = "0.2", default-features = false, optional = true }
once_cell = "1.13.0"

# Fix minimal-versions; opentelemetry specifies async-trait = "0.1" which breaks
async-trait = "0.1.20"

[dev-dependencies]
async-trait = "0.1.56"
criterion = { version = "0.3.6", default_features = false }
opentelemetry-jaeger = "0.17.0"
futures-util = { version = "0.3.21", default-features = false }
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"

[lib]
bench = false

[[bench]]
name = "trace"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]