[package]
name = "tracing-proc-macros"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "David Barsky <dbarsky@amazon.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"

[dev-dependencies]
tracing-fmt = { path = "../tracing-fmt" }
env_logger = "0.5"
ansi_term = "0.11"
humantime = "1.1.1"
