[package]
name = "tracing-proc-macros"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "David Barsky <dbarsky@amazon.com>"]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tracing-proc-macros/0.1.0/tracing_proc_macros"
description = """
Procedural macro attributes for automatically instrumenting function.s
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
tracing = { version = "0.1", path = "../tracing" }
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dev-dependencies]
tracing-fmt = { path = "../tracing-fmt" }
env_logger = "0.5"
ansi_term = "0.11"
humantime = "1.1.1"

[badges]
azure-devops = { project = "tracing/tracing", pipeline = "tokio-rs.tracing", build = "1" }
maintenance = { status = "experimental" }
