[package]
name = "tracing-proc-macros"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "David Barsky <dbarsky@amazon.com>"]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tracing-proc-macros/0.1.0/tracing_proc_macros"
description = """
Procedural macro attributes for automatically instrumenting function.s
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
tracing = "0.1"
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dev-dependencies]
tracing-fmt = "0.0.1-alpha.2"
tracing-futures = { path = "../tracing-futures", default-features = false, features = ["std-future"] }
tokio = { git = "https://github.com/tokio-rs/tokio.git" }


[badges]
azure-devops = { project = "tracing/tracing", pipeline = "tokio-rs.tracing", build = "1" }
maintenance = { status = "experimental" }
